--- a/public/components/play/play.css
+++ b/public/components/play/play.css
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    overflow-y: scroll;
+    overflow-y: auto;
     justify-content: center;
 }
 
